Paper Mario Items 0.5.5 -- Update notes
- Temporarily removed Lottery Ticket from the Package item's spawn pool